--- a/test/IteratorTests/IteratorTests.vcxproj.filters
+++ b/test/IteratorTests/IteratorTests.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="MapTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AlgorithmTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
