--- a/test/IteratorTests/IteratorTests.vcxproj
+++ b/test/IteratorTests/IteratorTests.vcxproj
@@ -156,7 +156,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AlgorithmTests.cpp" />
+    <ClCompile Include="ArrayAlgorithmTests.cpp" />
     <ClCompile Include="ArrayTests.cpp" />
     <ClCompile Include="ListTests.cpp" />
     <ClCompile Include="MapTests.cpp" />
