--- a/test/IteratorTests/IteratorTests.vcxproj.filters
+++ b/test/IteratorTests/IteratorTests.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="MapTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AlgorithmTests.cpp">
+    <ClCompile Include="ArrayAlgorithmTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
